Fix sub page column wrapping on tablet view

--- a/docs-website/_sass/components/_navigation-toc.scss
+++ b/docs-website/_sass/components/_navigation-toc.scss
@@ -31,7 +31,7 @@
     height: 1.5rem;
     cursor: pointer;
     float: right;
-    margin-top: 0.125rem;
+    margin-top: 0.25rem;
     margin-right: 0;
   }
 }
